Book/bookstore-k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-api-service
  namespace: dev
  labels:
    app: bookstore-api
spec:
  type: NodePort
  selector:
    app: bookstore-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
      name: http
  sessionAffinity: ClientIP
